# llvm-riscv-backend-evaluation

./: .gitignore  .gitmodules  README.md  bugs.lean  build.sh  generate_multi.py  lake-manifest.json  lakefile.toml  makefile  pyproject.toml  zuliprc
.github/workflows/: ci.yml
benchmarks/: create_func.py  fastntt.mlir  generate.py
benchmarks/LLC_ASM_globalisel/: 3_function_1.s  3_function_11.s  3_function_12.s  3_function_14.s  3_function_16.s  3_function_17.s  3_function_2.s  3_function_22.s  3_function_23.s  3_function_24.s  3_function_26.s  3_function_27.s  3_function_28.s  3_function_29.s  3_function_3.s  3_function_31.s  3_function_32.s  3_function_34.s  3_function_38.s  3_function_39.s  3_function_40.s  3_function_42.s  3_function_43.s  3_function_45.s  3_function_46.s  3_function_47.s  3_function_49.s  3_function_5.s  3_function_50.s  3_function_53.s  3_function_55.s  3_function_61.s  3_function_62.s  3_function_64.s  3_function_68.s  3_function_69.s  3_function_7.s  3_function_70.s  3_function_71.s  3_function_72.s  (+381 more)
benchmarks/LLC_ASM_selectiondag/: 3_function_0.s  3_function_10.s  3_function_12.s  3_function_13.s  3_function_17.s  3_function_18.s  3_function_20.s  (+293 more)
mca-analysis/: lib.py  mca-synthetic.py  plot.py  run_mca.py  upload_zulip.py
mca-analysis-real-benchmarks/: README.md  mca-real.py  plot.py  run_mca.py  table.py
real-benchmarks/: generate.py  mca.py  table.py
real-programs/: generate.py
synthetic-benchmarks/: generate.py  mca.py  plot.py
utils/: create_func.py  generate.py  lib.py  mca.py  plot.py  pyproject.toml  upload_zulip.py
(+3966 files in other folders)
